// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`separateBy '' conditional success tests AST matches snapshot 1`] = `[]`;

exports[`separateBy 'this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
]
`;

exports[`separateBy 'this,this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
  "this",
]
`;

exports[`separateBy 'this,this,this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
  "this",
  "this",
]
`;

exports[`separateBy 'this, this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 5,
}
`;

exports[`separateBy 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
    "eof",
  ],
  "pos": 0,
}
`;
